--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
 <body>
     <header>
-        <ul>
-            <li><img src="ikon.png" alt="Лазанья" width="80px" height="80px"></li>
+        <ul class="hedarlist1">
+            <li class="list1li"><img src="ikon.png" alt="Лазанья" width="80px" height="80px"></li>
+            <li class="list2li">Wilka</li>
             <li>
-                <ul>
-                    <li><a href="">Головна</a></li>
-                    <li><a href="">Рецепти</a></li>
-                    <li><a href="">Галерея</a></li>
+                <ul class="hedarlist2">
+                    <li><a href="" class="orangebtn">Головна</a></li>
+                    <li><a href="" class="blackbtn">Рецепти</a></li>
+                    <li><a href="" class="blackbtn">Галерея</a></li>
                 </ul>
             </li>
         </ul>
